[gd_scene load_steps=24 format=3 uid="uid://njlsu23nssbr"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ler1d"]
[ext_resource type="PackedScene" uid="uid://ce51h53enyje2" path="res://Resources/Explosion.tscn" id="2_3q7r5"]
[ext_resource type="Texture2D" uid="uid://tlvls6jenh5f" path="res://Art/gracz.png" id="2_ddrs8"]
[ext_resource type="AudioStream" uid="uid://bt602c1sijrpu" path="res://muzyka/lvl.wav" id="3_1xatk"]
[ext_resource type="AudioStream" uid="uid://dlk7l0b4ee0ii" path="res://muzyka/hurt.wav" id="4_ef6ow"]
[ext_resource type="AudioStream" uid="uid://dl5uw6iblybeu" path="res://muzyka/skok.wav" id="5_lwrp8"]
[ext_resource type="Texture2D" uid="uid://dgykpa57unql0" path="res://Art/9578af169d1ecc60aa5774fac7ef193e.jpg" id="6_wr0n1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hq30n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hefte"]

[sub_resource type="Animation" id="Animation_j78bm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xq2my"]
resource_name = "fall_normal"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 12, 13]
}

[sub_resource type="Animation" id="Animation_ecn30"]
resource_name = "fall_sad"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [34, 32, 33]
}

[sub_resource type="Animation" id="Animation_nad3j"]
resource_name = "idle_normal"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 0]
}

[sub_resource type="Animation" id="Animation_gcl67"]
resource_name = "idle_sad"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 20, 21]
}

[sub_resource type="Animation" id="Animation_14lmx"]
resource_name = "jump_normal"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_acccj"]
resource_name = "jump_sad"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="Animation" id="Animation_cdlqy"]
resource_name = "run_normal"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_u5ag7"]
resource_name = "run_sad"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_wawfa"]
resource_name = "wall_normal"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_6xq5s"]
resource_name = "wall_sad"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qj2h"]
_data = {
"RESET": SubResource("Animation_j78bm"),
"fall_normal": SubResource("Animation_xq2my"),
"fall_sad": SubResource("Animation_ecn30"),
"idle_normal": SubResource("Animation_nad3j"),
"idle_sad": SubResource("Animation_gcl67"),
"jump_normal": SubResource("Animation_14lmx"),
"jump_sad": SubResource("Animation_acccj"),
"run_normal": SubResource("Animation_cdlqy"),
"run_sad": SubResource("Animation_u5ag7"),
"wall_normal": SubResource("Animation_wawfa"),
"wall_sad": SubResource("Animation_6xq5s")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tl8j7"]
radius = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geiwg"]
size = Vector2(16, 15)

[node name="player" type="CharacterBody2D"]
platform_on_leave = 1
script = ExtResource("1_ler1d")

[node name="Explosion" parent="." instance=ExtResource("2_3q7r5")]
process_mode = 3
z_index = 7

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_hq30n")
debug_color = Color(0.991193, 0, 0.268754, 0.42)

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("2_ddrs8")
hframes = 5
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hefte")
debug_color = Color(0, 0.387728, 0.319127, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_2qj2h")
}

[node name="Nuta" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1xatk")
autoplay = true

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_ef6ow")

[node name="Skok" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lwrp8")

[node name="Sad" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sad"]
shape = SubResource("CircleShape2D_tl8j7")

[node name="Death" type="Timer" parent="."]
process_mode = 3
wait_time = 2.0
one_shot = true

[node name="dash" type="Timer" parent="."]
wait_time = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.447059, 0.643137, 0.533333, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("6_wr0n1")

[node name="CrushBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrushBox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_geiwg")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="Nuta" to="." method="_on_nuta_finished"]
[connection signal="area_entered" from="Sad" to="." method="_on_sad_area_entered"]
[connection signal="area_exited" from="Sad" to="." method="_on_sad_area_exited"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
[connection signal="timeout" from="dash" to="." method="_on_dash_timeout"]
[connection signal="area_entered" from="CrushBox" to="." method="_on_crush_box_area_entered"]
[connection signal="body_entered" from="CrushBox" to="." method="_on_crush_box_body_entered"]
